--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -18,5 +18,14 @@ The Inverted Triangle:
 */
 
 @import "settings.global.css";
+@import "settings.colors.css";
+
+@import "tools.mixins.css";
+
 @import "generic.reeeset.css";
+
+@import "elements.page.css";
+@import "elements.links.css";
+
 @import "components.header.css";
+@import "components.projectgrid.css";
