--- a/lib/css/settings.global.css
+++ b/lib/css/settings.global.css
@@ -3,9 +3,14 @@ $sans-serif: "Karla", "Helvetica Neue", Helvetica, Sans-Serif; /* 400, 700 */
 $serif: "Crimson", "Garamond", Georgia, Serif; /* 400, 600, italic */
 $mono: "Fira Code", Monaco, Consolas, "Lucida Console", monospace; /* 400 */
 
-$base-font-size:    16px;
-$base-line-height:  24px;
+$base-font-size: 16px;
+$base-line-height: 24px;
 $base-spacing-unit: $base-line-height;
 
 /* Grid */
+
 @lost flexbox flex;
+@lost gutter 20px;
+
+$wide-container: 1280px;
+$narrow-container: 960px;
