--- a/lib/css/elements.page.css
+++ b/lib/css/elements.page.css
@@ -1,5 +1,6 @@
 html {
     font-family: $sans-serif;
+    font-feature-settings: "kern", "liga";
     font-size: ($base-font-size / 16px) * 1rem;
     line-height: $base-line-height / $base-font-size;
 }
