--- a/lib/css/components.projectgrid.css
+++ b/lib/css/components.projectgrid.css
@@ -6,6 +6,7 @@
 }
 
 .GridItem {
+    margin-bottom: 1.5rem;
     overflow: hidden;
     position: relative;
 
@@ -48,7 +49,9 @@
 
     &--proreferral { lost-column: 1/2; }
     &--registration { lost-column: 1/2; }
-    &--cfnapa { lost-column: 1/3; }
+    &--cfnapa { lost-column: 1/3 0; }
+    &--macys { lost-column: 1/3 0; }
+    &--recipes { lost-column: 1/3 0; }
 }
 
 /* Styles for the Pro Referral Case */
@@ -56,20 +59,19 @@
 .ProReferral {
 
     &-bg {
+
+        @mixin project-thumbnail-bg;
         background: url("../images/ProReferral-Thumb-BG.jpg");
         background-size: cover;
-        padding-top: 61.35%;
-        position: relative;
-        width: 100%;
-        z-index: 1;
+        filter: brightness(0.7);
     }
 
     &-device {
         background: url("../images/ProReferral-Thumb-Device.png");
         background-size: cover;
         position: absolute 50% 50%;
-        size: 218px 455px;
-        transform: translateX(-109px) translateY(-156px);
+        size: 35% 118%;
+        transform: translateX(-50%) translateY(-35%);
         z-index: 2;
     }
 
@@ -77,48 +79,54 @@
 
     &-cardArea {
         overflow: hidden;
-        position: absolute 105px 15px;
-        size: 188px 300px;
+        position: absolute 23.5% 0 0 7.3%;
+        size: 85% 66%;
     }
 
     &-card {
         position: absolute;
-        size: 117px 149px;
+        size: 62.5% 50%;
 
         &--1 {
-            animation: In-PR-card-1 0.5s normal forwards ease-out;
+
+            @mixin desktop { animation: In-PR-card-1 0.5s normal forwards ease-out; }
             background: url("../images/ProReferral-Thumb-Card-1.png");
-            transform: translateX(36px) translateY(24px);
+            background-size: cover;
+            transform: translateX(30.7%) translateY(16.6%);
             z-index: 6;
         }
 
         &--2 {
-            animation: In-PR-card-2 0.5s normal forwards ease-out;
+            @mixin desktop { animation: In-PR-card-2 0.5s normal forwards ease-out; }
             background: url("../images/ProReferral-Thumb-Card-2.png");
-            transform: translateX(55px) translateY(25px) scale(0.9);
+            background-size: cover;
+            transform: translateX(47%) translateY(16.6%) scale(0.9);
             z-index: 5;
         }
 
         &--3 {
-            animation: In-PR-card-3 0.5s normal forwards ease-out;
+            @mixin desktop { animation: In-PR-card-3 0.5s normal forwards ease-out; }
             background: url("../images/ProReferral-Thumb-Card-3.png");
-            transform: translateX(72px) translateY(25px) scale(0.8);
+            background-size: cover;
+            transform: translateX(61%) translateY(16.6%) scale(0.8);
             z-index: 4;
         }
 
         &--4 {
-            animation: In-PR-card-4 0.5s normal forwards ease-out;
+            @mixin desktop { animation: In-PR-card-4 0.5s normal forwards ease-out; }
             background: url("../images/ProReferral-Thumb-Card-4.png");
+            background-size: cover;
             opacity: 0.8;
-            transform: translateX(55px) translateY(25px) scale(0.9);
+            transform: translateX(72%) translateY(16.5%) scale(0.7);
             z-index: 3;
         }
     }
-
-    &:hover &-card--1 { animation: Out-PR-card-1 0.7s normal forwards ease-out-quad; }
-    &:hover &-card--2 { animation: Out-PR-card-2 0.7s normal forwards ease-out-quad; }
-    &:hover &-card--3 { animation: Out-PR-card-3 0.7s normal forwards ease-out-quad; }
-    &:hover &-card--4 { animation: Out-PR-card-4 0.7s normal forwards ease-out-quad; }
+    @mixin desktop {
+        &:hover &-card--1 { animation: Out-PR-card-1 0.7s normal forwards ease-out-quad; }
+        &:hover &-card--2 { animation: Out-PR-card-2 0.7s normal forwards ease-out-quad; }
+        &:hover &-card--3 { animation: Out-PR-card-3 0.7s normal forwards ease-out-quad; }
+        &:hover &-card--4 { animation: Out-PR-card-4 0.7s normal forwards ease-out-quad; }
+    }
 }
 
 /* Styles for the Registration Case */
@@ -126,16 +134,19 @@
 .Registration {
 
     &-bg {
+
+        @mixin project-thumbnail-bg;
         backface-visibility: hidden;
         background: url("../images/Registration-BG.jpg");
         background-size: cover;
-        padding-top: 61.35%;
         perspective: 1000;
-        position: relative;
         transform: scale(1);
         transition: all 0.3s ease-out-quint;
-        width: 100%;
-        z-index: 1;
+    }
+
+    &:hover &-bg {
+        filter: blur(1px) grayscale(0.2);
+        transform: scale(1.1);
     }
 
     &-logo {
@@ -149,42 +160,143 @@
 
     }
 
-    &:hover &-bg {
-        filter: blur(1px) grayscale(0.2);
-        transform: scale(1.1);
-    }
-
     &:hover &-logo { transform: translateX(-100px) translateY(-140px) scale(0.8); }
 }
-
 
 .CFN {
 
     &-bg {
+        @mixin project-thumbnail-bg;
         background: #000;
-        padding-top: 61.35%;
-        position: relative;
         overflow: hidden;
-        width: 100%;
+    }
+
+    &-logo {
+        background: url("../images/CFN-Thumb-Logo.svg") no-repeat center;
+        opacity: 0.8;
+        position: absolute 50% 50%;
+        size: 60% 18%;
+        transform: translateX(-50%) translateY(-50%);
+        transition: all 0.3s ease-out-quint;
+        z-index: 3;
+    }
+
+    &-scroller {
+        animation: CFN-Scroller 180s normal forwards ease-out;
+        animation-play-state: paused;
+        background: url("../images/CFN-Thumb-BG.jpg") repeat-x;
+        background-size: contain;
+        filter: blur(1px) grayscale(0.5) brightness(0.5);
+        position: absolute;
+        size: 1200px 100%;
+        z-index: 2;
+    }
+
+    &:hover &-logo {
+        opacity: 1;
+        transform: translateX(-50%) translateY(-80%);
+    }
+
+    &:hover &-scroller { animation-play-state: running; }
+}
+
+.Macys {
+    &-bg {
+        @mixin project-thumbnail-bg;
+        background: url("../images/Macys-Thumb-BG.jpg");
+        background-size: cover;
+        transition: all 0.3s ease-out-quint;
         z-index: 1;
     }
 
-    &-scrollContainer {
-        transform: rotate(10deg) translateX(-340px);
-        position: absolute;
-        z-index: 2;
-    }
-    &-scroller {
-        background: url("../images/CFN-Thumb-BG.jpg");
-        background-size: cover;
-        filter: blur(1px) grayscale(0.5) brightness(0.5);
-        /*position: absolute;*/
-        size: 604px 3900px;
-        transition: all 160s linear;
+    &-tooltip {
+        background: url("../images/Macys-Thumb-Tooltip.png") no-repeat center;
+        background-size: contain;
+        opacity: 0;
+        position: absolute 50% 50%;
+        size: 65% 38%;
+        transform: translateX(-45%) translateY(-40%);
+        transition: all 0.3s ease-out-quint;
+        z-index: 3;
     }
 
-    &:hover &-scroller {
-        filter: blur(10px) grayscale(0.2);
-        transform: translateY(-90%);
+    &:hover &-bg { transform: scale(1.1); }
+    &:hover &-tooltip {
+        opacity: 1;
+        transform: translateX(-55%) translateY(-43%);
+    }
+}
+
+.Recipes {
+    cursor: default; /* Project isn't live yet... */
+
+    &-bg {
+
+        @mixin project-thumbnail-bg;
+        background: url("../images/Recipes-Thumb-BG.jpg");
+        background-size: cover;
+        transition: all 0.3s ease-out-quint;
+    }
+
+
+
+    &-logoBlock {
+        background: #fff;
+        position: absolute 50% 50%;
+        size: 16% 25%;
+        transform: translateX(-50%) translateY(-50%);
+        transition: all 0.3s ease-out-quint;
+        z-index: 3;
+    }
+
+    &-logoMark {
+        background: url("../images/Recipes-Thumb-Logo.svg") no-repeat center;
+        background-size: contain;
+        position: absolute 50% 50%;
+        size: 70%;
+        transform: translateX(-50%) translateY(-50%);
+        transition: all 0.7s ease-out-quint;
+        z-index: 4;
+    }
+
+
+
+    &-logoType {
+        background: url("../images/Recipes-Thumb-LogoType.svg") no-repeat center;
+        background-size: contain;
+        opacity: 0;
+        position: absolute 50% 50%;
+        size: 40% 20%;
+        transform: translateX(-40%) translateY(-50%);
+        transition: all 0.3s ease-out-quint;
+        z-index: 2;
+    }
+
+    &-placeholder {
+        color: #fff;
+        display: block;
+        font-size: 1.5rem;
+        font-weight: 300;
+        opacity: 0;
+        position: absolute 1rem auto;
+        text-align: center;
+        transform: translateY(10%);
+        transition: all 0.3s ease-out-quint;
+        width: 100%;
+        z-index: 2;
+    }
+
+    @mixin desktop {
+        &:hover &-bg { filter: blur(1px) brightness(0.8); }
+        &:hover &-logoBlock { transform: translateX(-190%) translateY(-50%); }
+        &:hover &-logoMark { transform: translateX(-50%) translateY(-50%) rotate(-180deg); }
+        &:hover &-logoType {
+            opacity: 1;
+            transform: translateX(-25%) translateY(-50%);
+        }
+        &:hover &-placeholder {
+            opacity: 1;
+            transform: translateY(0);
+        }
     }
 }
