--- a/lib/css/settings.animations.css
+++ b/lib/css/settings.animations.css
@@ -1,54 +1,55 @@
 @keyframes LogoGradient {
-    0% { background-position:0% 100% }
-    50% { background-position:100% 0% }
-    100% { background-position:0% 100% }
+    0% { background-position: 0% 100%; }
+    50% { background-position: 100% 0%; }
+    100% { background-position: 0% 100%; }
 }
 
 @keyframes In-PR-card-1 {
-    0% { transform: translateX(-340px) translateY(24px); }
-    100% { transform: translateX(36px) translateY(24px); }
+    0% { transform: translateX(-300%) translateY(16.5%) }
+    90% { transform: translateX(31%) translateY(16.5%) }
+    100% { transform: translateX(30.7%) translateY(16.6%); }
 }
 
 @keyframes Out-PR-card-1 {
-    0% { transform: translateX(36px) translateY(24px); }
-    100% { transform: translateX(-340px) translateY(24px); }
+    0% { transform: translateX(30.7%) translateY(16.6%); }
+    100% { transform: translateX(-300%) translateY(16.5%); }
 }
 
 @keyframes In-PR-card-2 {
-    0% { transform: translateX(-210px) translateY(24px) scale(1); }
-    70% { transform: translateX(30px) translateY(24px) scale(1); }
-    100% { transform: translateX(55px) translateY(25px) scale(0.9); }
+    0% { transform: translateX(-180%) translateY(16.5%) scale(1); }
+    70% { transform: translateX(25.6%) translateY(16.5%) scale(1); }
+    100% { transform: translateX(47%) translateY(16.6%) scale(0.9); }
 }
 
 @keyframes Out-PR-card-2 {
-    0% { transform: translateX(55px) translateY(25px) scale(0.9); }
-    18% { transform: translateX(30px) translateY(24px) scale(1); }
-    100% { transform: translateX(-210px) translateY(24px) scale(1); }
+    0% { transform: translateX(47%) translateY(16.6%) scale(0.9); }
+    18% { transform: translateX(25.6%) translateY(16.5%) scale(1); }
+    100% { transform: translateX(-180%) translateY(16.5%) scale(1); }
 }
 
 @keyframes In-PR-card-3 {
-    0% { transform: translateX(-80px) translateY(24px) scale(1); }
-    30% { transform: translateX(30px) translateY(24px) scale(1); }
-    100% { transform: translateX(72px) translateY(25px) scale(0.8); }
+    0% { transform: translateX(-68.3%) translateY(16.5%) scale(1); }
+    30% { transform: translateX(25.6%) translateY(16.5%) scale(1); }
+    100% { transform: translateX(61%) translateY(16.6%) scale(0.8); }
 }
 
 @keyframes Out-PR-card-3 {
-    0% { transform: translateX(72px) translateY(25px) scale(0.8); }
-    42% { transform: translateX(30px) translateY(24px) scale(1); }
-    80% { transform: translateX(-85px) translateY(24px) scale(1); }
-    100% { transform: translateX(-80px) translateY(24px) scale(1); }
+    0% { transform: translateX(61%) translateY(16.6%) scale(0.8); }
+    42% { transform: translateX(25.6%) translateY(16.5%) scale(1); }
+    80% { transform: translateX(-72%) translateY(16.5%) scale(1); }
+    100% { transform: translateX(-68.3%) translateY(16.5%) scale(1); }
 }
 
 @keyframes In-PR-card-4 {
 
     0% {
         opacity: 1;
-        transform: translateX(50px) translateY(24px) scale(1);
+        transform: translateX(43%) translateY(16.5%) scale(1);
     }
 
     100% {
         opacity: 0.8;
-        transform: translateX(86px) translateY(25px) scale(0.7);
+        transform: translateX(72%) translateY(16.5%) scale(0.7);
     }
 
 }
@@ -57,16 +58,21 @@
 
     0% {
         opacity: 0.8;
-        transform: translateX(86px) translateY(25px) scale(0.7);
+        transform: translateX(72%) translateY(16.5%) scale(0.7);
     }
 
     70% {
         opacity: 1;
-        transform: translateX(50px) translateY(24px) scale(1);
+        transform: translateX(41%) translateY(16.5%) scale(1);
     }
 
     100% {
         opacity: 1;
-        transform: translateX(50px) translateY(24px) scale(1);
+        transform: translateX(43%) translateY(16.5%) scale(1);
     }
+}
+
+@keyframes CFN-Scroller {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(-90%); }
 }
