--- a/lib/css/elements.page.css
+++ b/lib/css/elements.page.css
@@ -4,3 +4,7 @@ html {
     font-size: ($base-font-size / 16px) * 1rem;
     line-height: $base-line-height / $base-font-size;
 }
+
+body {
+    /*lost-utility: edit;*/
+}
