--- a/lib/css/components.project.css
+++ b/lib/css/components.project.css
@@ -1,5 +1,7 @@
 .Project {
     position: relative;
+
+
     /* Hero Section */
     &-hero {
         position: relative;
@@ -24,6 +26,11 @@
             background: url("../images/Registration-Case-HeaderBG-Sharp.jpg") no-repeat center;
             background-size: cover;
         }
+
+        &--Macys {
+            background: url("../images/Macys-BG.jpg") no-repeat center;
+            background-size: cover;
+        }
     }
 
     &-logo {
@@ -34,58 +41,63 @@
         transform: translateX(-50%);
     }
 
-    &-mainPreview {
 
-        lost-center: $narrow-container;
-        margin-bottom: 3rem;
 
-        &--CFN {
-            background: url("../images/CFN-Case-MainPreview.png") no-repeat center;
-            background-size: contain;
-            margin-top: -280px;
-            size: 960px 567px;
+    &-block {
+        margin-bottom: 10vr;
+
+        p {
+            font: 1.414rem/2.5vr $serif;
+            margin-bottom: 2vr;
         }
 
-        &--Registration {
-            background: url("../images/Registration-Case-MainPreview.png") no-repeat center;
-            background-size: contain;
-            margin-top: -325px;
-            size: 960px 563px;
-        }
+        /* Contain blocks that aren't full-width */
+        &:not(&--fw) { lost-center: $wide-container; }
     }
 
-    &-body {
-        lost-center: $wide-container;
-        font-family: $serif;
-        font-size: 1.25rem;
-    }
-
-    &-summary {
-        color: #333;
-        display: inline-block;
-        font-size: 1.75rem;
-        lost-column: 1/2;
-        lost-move: 1/4;
-
-        &:after {
-            display: block;
-            content: "";
-            width: 20%;
-            margin: 4rem auto;
-            height: 3px;
-            background: #e3e3e3;
-        }
-    }
 
     &-description {
         lost-column: 2/3;
         lost-move: 1/6;
-
-        p {
-            font-size: 1.375rem;
-        }
     }
 }
+
+.Overview {
+    margin-top: 4vr;
+    lost-center: $wide-container;
+
+    &-summary {
+        color: #333;
+        display: inline-block;
+        font: 2rem/3vr $serif;
+        lost-column: 3/5 2;
+        margin: 0;
+    }
+
+    &-scope { lost-column: 2/5 2; }
+
+    &-title {
+        display: block;
+        border-bottom: 1px solid #e3e3e3;
+        margin-top: 1vr;
+    }
+
+    &-item {
+        font-weight: 300;
+        margin-bottom: 2.25vr;
+    }
+
+    &:after {
+        display: block;
+        content: "";
+        width: 10%;
+        margin: 4vr auto;
+        height: 4px;
+        background: #e3e3e3;
+    }
+}
+
+
 
 .PhotoBlock {
     lost-column: 1;
