--- a/lib/css/elements.headings.css
+++ b/lib/css/elements.headings.css
@@ -1,23 +1,24 @@
 h1 {
-    @include font-size(32px);
+    /*@include font-size(32px);*/
 }
 
 h2 {
-    @include font-size(28px);
+    font: 500 1.414rem/2vr $sans-serif;
 }
 
 h3 {
-    @include font-size(24px);
+    font: 500 1rem/1.5vr $sans-serif;
+    text-transform: uppercase;
 }
 
 h4 {
-    @include font-size(20px);
+    /*@include font-size(20px);*/
 }
 
 h5 {
-    @include font-size(18px);
+    /*@include font-size(18px);*/
 }
 
 h6 {
-    @include font-size(16px);
+    /*@include font-size(16px);*/
 }
