--- a/lib/css/elements.page.css
+++ b/lib/css/elements.page.css
@@ -2,11 +2,9 @@ html {
 }
 
 body {
-    font: 16px/1 $sans-serif;
+    font: $ts0/1 $sans-serif;
     font-feature-settings: "kern", "liga";
     /*lost-utility: edit;*/
 }
 
-figcaption {
-    font: 300 16px/1 $sans-serif;
-}
+figcaption { font: 300 $ts0/1 $sans-serif; }
