--- a/lib/css/components.project.macys.css
+++ b/lib/css/components.project.macys.css
@@ -1,6 +1,5 @@
 
 .MacysStrategy {
-    &-title { lost-column: 1/1; }
     &-description { lost-column: 2/3 0; }
 
     &-quote {
@@ -15,26 +14,26 @@
 }
 
 .MacysEpics {
-    &-title { lost-column: 1/1; }
     &-description { lost-column: 2/3 0; }
     &-list { lost-center: $wide-container; }
+
     &-epic {
         lost-column: 1/4;
-
         li { margin-bottom: 1vr; }
 
         &Heading {
-            list-style: none;
             border-bottom: 1px solid #e3e3e3;
+            list-style: none;
             h3 { margin-bottom: 0; }
         }
 
         li:not(.MacysEpics-epicHeading) {
-            margin-left: 1.5vr;
             font-weight: 300;
             line-height: 1.5vr;
+            margin-left: 1.5vr;
         }
     }
+
     &-flow {
         lost-column: 2/3;
         lost-move: 1/6;
@@ -50,20 +49,19 @@
     &-description {
         lost-center: $wide-container;
 
-        h2 {
-            color: #fff;
-            lost-column: 1/1;
-            margin-top: 5vr;
-        }
         p {
             color: #fff;
             lost-column: 1/2;
         }
     }
+
+    &-title {
+        color: #fff;
+        margin-top: 5vr;
+    }
 }
 
 .MacysDiscovery {
-    &-title { lost-column: 1/1; }
     &-description { lost-column: 2/3 0; }
     &-list { lost-center: $wide-container; }
     &-mock { lost-column: 1/4; }
@@ -79,36 +77,31 @@
 
 .MacysAssistance {
     background: #485563;
-    background: linear-gradient(to left, #485563 , #29323c);
+    background: linear-gradient(to left, #485563, #29323c);
     padding: 4vr;
+
     &-container { lost-center: $wide-container; }
-    &-title {
-        color: #fff;
-        lost-column: 1/1;
-    }
+    &-title { color: #fff; }
+
     &-description {
         color: rgba(#fff, 0.9);
         lost-column: 1/2 2;
     }
+
     &-mock { lost-column: 1/2 2; }
 }
 
 .MacysMapping {
-    &-title { lost-column: 1/1; }
+
     &-deviceMock {
         lost-column: 1/4 3;
         lost-move: 1/12;
     }
+
     &-description { lost-column: 2/3 3; }
 }
 
-
 .MacysRewards {
-    &-title {
-        lost-column: 1/1;
-    }
-    &-description {
-        lost-column: 1/2 3;
-    }
+    &-description { lost-column: 1/2 3; }
     &-mock { lost-column: 1/4 3; }
 }
