--- a/lib/css/components.project.cfn.css
+++ b/lib/css/components.project.cfn.css
@@ -1,3 +1,5 @@
+.Header--CFN.is-scrolled h1 { color: #88815e; }
+
 .Project-hero--CFN::before {
     background: url("../images/CFN-Case-HeaderBG.jpg") no-repeat top center;
     background-size: contain;
