--- a/lib/css/components.project.registration.css
+++ b/lib/css/components.project.registration.css
@@ -1,3 +1,5 @@
+.Header--Registration.is-scrolled h1 { color: #007861; }
+
 .Project-hero--Registration {
     position: absolute 0;
     z-index: 0;
