--- a/lib/css/settings.global.css
+++ b/lib/css/settings.global.css
@@ -7,6 +7,7 @@ $base-font-size: 16px;
 $base-line-height: 24px;
 $base-spacing-unit: $base-line-height;
 
+$ts4: 4rem;
 $ts3: 2.827rem;
 $ts2: 2rem;
 $ts1: 1.414rem;
@@ -15,8 +16,10 @@ $ts-1: 0.707rem;
 
 /* Grid */
 
+$gutter: 64px;
+
 @lost flexbox flex;
-@lost gutter 24px;
+@lost gutter 64px;
 
 $wide-container: 1280px;
 $narrow-container: 960px;
